upgrade all packages

--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -1,12 +1,9 @@
 <% var data = {
-  title: "Page title",
+title: "Apt",
 }; %>
 <%= _.template(require('./../includes/header.html'))(data) %>
 
-<main>
-  <section class="section hero">
-    Hero
-  </section>
+<main class="main">
 </main>
 
 <%= _.template(require('./../includes/footer.html'))(data) %>
