--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -1,9 +1,9 @@
-/* MuseoSansCyrl example
-@font-face {
-  font-family: 'MuseoSansCyrl';
-  font-style: normal;
-  font-weight: 100;
-  src: local('MuseoSansCyrl Light'), local('MuseoSansCyrl-Light'),
-    url('../fonts/MuseoSans Cyrillic/MuseoSansCyrl-100.otf') format('opentype');
-}
- */
+/* example */
+// @font-face {
+//   font-family: 'ff';
+//   font-style: italic;
+//   font-swap: swap;
+//   font-weight: 400;
+//   src: local('fn'), local('fn'),
+//     url('../fonts/fn.ttf') format('truetype'),
+// }
