--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,7 @@
 @import "~normalize.css/normalize.css";
+
+@import "./variables";
+@import "./mixins";
 @import "./common";
 @import "./fonts";
 @import "./icons";
