--- a/src/html/includes/header.html
+++ b/src/html/includes/header.html
@@ -1,24 +1,23 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Favicon here
-    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
-    <link rel="manifest" href="/favicon/site.webmanifest">
-    <link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" color="#5bbad5">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#ffffff">
-    -->
+    <!-- <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png"> -->
+    <!-- <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png"> -->
+    <!-- <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png"> -->
+    <!-- <link rel="manifest" href="favicon/site.webmanifest"> -->
+    <!-- <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5"> -->
+    <!-- <link rel="shortcut icon" href="favicon/favicon.ico"> -->
+    <!-- <meta name="msapplication-TileColor" content="#ffffff"> -->
+    <!-- <meta name="msapplication-config" content="favicon/browserconfig.xml"> -->
+    <!-- <meta name="theme-color" content="#ffffff"> -->
 
-    <link rel="stylesheet" href="css/style.bundle.css?v=0.0.1" />
-
-    <title><%=title%></title>
+    <link rel="stylesheet" href="style.bundle.css?v=0.0.1">
+    <title><%=title%>
+    </title>
   </head>
   <body>
-    <header class="header">
-      Header
+    <header class="header" id="header">
     </header>
