fix variables and title

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,6 +3,7 @@ $font-secondary: system-ui, sans-serif;
 
 $color-main: #000;
 $color-secondary: #fff;
+$color-backgroud: #fff;
 
 $transition-duration: 0.3s;
 $transition-duration-small: 0.2s;
